@@ -1,3 +1,5 @@
+*gcr-3.36.0-r1
+::gentoo				update copyright, add test use flag, improve dependencies
 *gcr-3.36.0
 ::gentoo
 -update copyright
